# CoD4x-launcher

launcher/: Cargo.toml
launcher/src/launcher/: cod4x.rs  entrypoint.rs  filesystem.rs  http.rs  iw3mp.rs  miles32.rs  mod.rs
launcher/src/launcher/updater/: github.rs  gui.rs  mod.rs
