[package]
name = "launcher"
version = "1.1.3"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
user32-sys = "0.2.0"
libloading = "0.9.0"
glob = "0.3.1"

[dependencies.winapi]
version = "0.3.9"
features = [
    "minwindef",
    "winbase",
    "winerror",
    "processthreadsapi",
    "winnt",
    "libloaderapi",
    "processenv",
    "knownfolders",
    "shlobj",
    "combaseapi",
]

[dependencies.cod4v17_patch]
path = "../cod4v17_patch"
version = "1.0.0"
optional = true

[features]
default = []
cod4v17_patch = ["dep:cod4v17_patch"]

[build-dependencies]
embed-resource = "3.0.6"

[lib]
crate-type = ["cdylib"]
